Successful PUT request

--- a/database/tasks.json
+++ b/database/tasks.json
@@ -1,1 +1,1 @@
-{"list":["wash dishes","cook dinner","cook","wash","shop","groceries","donut","watch arcane","code","new task","speak","new task","listen to music","music","play game"]}
+{"list":["cook dinner","wash dishes","music"]}
