--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To-Do list application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/get-tests.js",
     "start": "node server.js"
   },
   "keywords": [],
