--- a/database/apple.json
+++ b/database/apple.json
@@ -1,1 +1,1 @@
-{"username":"apple","password":"abcd","list":["sell macbooks","sell iphones"]}
+{"username":"apple","password":"abcd","list":["sell macbooks","buy a iphone"]}
