--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "mocha": "^10.7.0"
+    "mocha": "^10.7.0",
+    "morgan": "^1.10.0"
   }
 }
