--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Zen",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mocha": "^10.7.0",
     "morgan": "^1.10.0"
