--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.8.1"
+    "@types/node": "^22.8.1",
+    "typescript": "^5.6.3"
   }
 }
